--- a/users/static/users/login/users_login.css
+++ b/users/static/users/login/users_login.css
@@ -11,9 +11,7 @@ html {
     align-items: center;
     background-color: white; /* Fondo blanco */
     width: 100%; /* Asegura que el contenedor ocupe todo el ancho disponible */
-    display: flex;
-    justify-content: center;  /* Centra horizontalmente */
-    align-items: center;      /* Centra verticalmente */
+    display: flex; /* Centra horizontalmente */    /* Centra verticalmente */
     height: 100vh;            /* Ocupa toda la altura de la ventana */
 }
 
@@ -124,4 +122,7 @@ p {
     margin-top: 10px;
     font-size: 0.9em;
     text-align: center;
+}
+.message {
+    transition: opacity 0.5s ease;
 }
