--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -19,22 +19,28 @@
   <!-- Texto debajo del logo -->
   <h2 class="title">Inicio de sesión</h2>
 
+  {% if messages %}
+      {% for message in messages %}
+          <div class="message {% if message.tags %}{{ message.tags }}{% endif %}">{{ message }}</div>
+      {% endfor %}
+  {% endif %}
+
   <!-- Formulario de inicio de sesión -->
   <form action="{% url 'users:login' %}" method="POST" class="login-form">
     {% csrf_token %}
     
-    <!-- Campo de correo/usuario -->
+    <!-- Campo de usuario -->
     <div class="form-group">
-      <label for="email">Correo</label>
+      <label for="username">Usuario</label>
       <input
-        type="email"
-        id="email"
-        name="email"
-        placeholder="Ingresa tu correo"
+        type="text"
+        id="username"
+        name="username" 
+        placeholder="Ingresa tu usuario"
         required
       />
-      {% if form.email.errors %}
-        <div class="error-message">{{ form.email.errors.0 }}</div>
+      {% if form.username.errors %}
+        <div class="error-message">{{ form.username.errors.0 }}</div>
       {% endif %}
     </div>
     
@@ -53,7 +59,6 @@
     <!-- Enlace para recuperación de contraseña -->
     <div class="recovery-options">
       <a href="{% url 'users:password_reset' %}">¿Olvidaste tu contraseña?</a>
-      <p>                                                          </p>
     </div>
 
     <!-- Botón de envío -->
