--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
           <!-- Enlaces actualizados con rutas correctas a las páginas -->
           <a href="{% url 'about_us' %}">Nosotros</a>
           <a href="{% url 'documentation' %}">Documentación</a>
-          <a href="{% url 'projects' %}">Proyectos</a>
+          <a href="{% url 'user_projects:projects' %}">Proyectos</a>
         </div>
                 
         <div class="user-profile">
