--- a/ai_module/templates/ai_module/testcases.html
+++ b/ai_module/templates/ai_module/testcases.html
@@ -2,9 +2,8 @@
 {% load static %}
 
 {% block extra_css %}
-  <!-- Archivos CSS específicos de la página -->
-  <link rel="stylesheet" href="{% static 'ai_module/ai_module.css' %}">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'ai_module/ai_module.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -61,6 +60,31 @@
 {% endblock %}
 
 {% block extra_js %}
-  <script src="{% static 'ai_module/ai_module.js' %}"></script>
-  
+    <script src="{% static 'ai_module/ai_module.js' %}"></script>
+
+
+    <script>
+        function enviarJSON() {
+            // Obtén el resultado procesado del HTML
+            const resultadoProcesado = document.getElementById("resultadoProcesado").value;
+    
+            fetch("{% url 'ai_module:enviar_json' %}", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                    "X-CSRFToken": "{{ csrf_token }}"
+                },
+                body: JSON.stringify({ resultado_procesado: resultadoProcesado })
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById("mensaje").innerText = data.mensaje;
+            })
+            .catch(error => {
+                console.error("Error al enviar JSON:", error);
+                document.getElementById("mensaje").innerText = "Error al enviar JSON.";
+            });
+        }
+    </script>
+
 {% endblock %}
