--- a/user_projects/templates/user_projects/user_select.html
+++ b/user_projects/templates/user_projects/user_select.html
@@ -12,11 +12,12 @@
 
     <div class="modules-grid">
       <!-- Módulo de Casos de Prueba -->
-      <a href="{% url 'ai_module:testcases' %}" style="text-decoration: none; color: inherit;">
+      <a href="{% url 'ai_module:testcases' project.id %}" style="text-decoration: none; color: inherit;">
         <div class="module-card">
           <h2 class="module-title">Casos de prueba</h2>
           <p class="module-description">
-            En este módulo podrás generar casos de prueba para tu proyecto utilizando IA, integrando documentos que ya hayas creado por tu cuenta o que te haya proporcionado tu empresa.
+            En este módulo podrás generar casos de prueba para tu proyecto utilizando IA, integrando documentos que ya
+            hayas creado por tu cuenta o que te haya proporcionado tu empresa.
           </p>
           <div class="module-add-card">
             <span class="add-icon">⮕</span>
@@ -29,7 +30,8 @@
         <div class="module-card">
           <h2 class="module-title">Pruebas Funcionales</h2>
           <p class="module-description">
-            En este módulo, integrado con inteligencia artificial, podrás automatizar pruebas funcionales y visualizar en tiempo real el estado y progreso de las mismas.
+            En este módulo, integrado con inteligencia artificial, podrás automatizar pruebas funcionales y visualizar
+            en tiempo real el estado y progreso de las mismas.
           </p>
           <div class="module-add-card">
             <span class="add-icon">⮕</span>
